<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/station_menu_item" android:enabled="true" android:title="@string/StationDetailsItem"></item>
    <item android:id="@+id/cloud_menu_item" android:title="@string/CloudDetailsItem"></item>
    <item android:id="@+id/telephony_menu_item" android:title="@string/TelephonyDetailsItem"></item>
    <item android:id="@+id/diagnostics_menu_item" android:title="@string/DiagnosticsMenuItem"></item>
    <item android:id="@+id/synchronization_menu_item" android:title="@string/SynchronizationMenuItem"></item>
    <item android:id="@+id/services_menu_item" android:title="Services"></item><item android:id="@+id/quity_menu_item" android:title="@string/QuitItem"></item>
    
    

</menu>