<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MulticastIPAddressLable"
            android:textSize="@dimen/LabelTextSize" >
        </TextView>

        <EditText
            android:id="@+id/multicast_configuration_ipaddress_etv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text" />

       
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MulticastPortLable"
            android:textSize="@dimen/LabelTextSize" >
        </TextView>

        <EditText
            android:id="@+id/multicast_configuration_port_etv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="number" />
    </LinearLayout>
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:background="#ffD8D8D8"
        android:gravity="center_horizontal"
        android:padding="@dimen/ButtonPanelPadding" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/SaveButtonText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancel"
            android:text="@string/CancelButtonText" />
    </LinearLayout>
</LinearLayout>