<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beige_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/shadow_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/DiagnosticsFrequencyLabel"
                android:textSize="@dimen/SmallerContentText"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/synchronization_frequency_configuration_etv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />

            <Spinner
                android:id="@+id/synchronization_frequency_configuration_spn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/DiagnosticsConfigurationFrequencyUnit" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0"
            android:background="@drawable/shadow_background"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" >

            <CheckedTextView
                android:id="@+id/synchronization_configure_frequency_syncduringparticulartimes_ctv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checkMark="@android:drawable/checkbox_off_background"
                android:clickable="true"
                android:onClick="onCheck"
                android:text="@string/SynchronizationTimespanLabel"
                android:textSize="@dimen/SmallerContentText" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TableRow
                    android:id="@+id/synchronization_configure_frequency_starttime_tbr"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:enabled="false"
                    android:onClick="onSetStartTime" >

                    <TextView
                        android:id="@+id/synchronization_configure_frequency_starttimelabel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:text="@string/SynchronizationConfigureFrequencyStartTimeLabel"
                        android:textSize="@dimen/SmallerContentText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/synchronization_configure_frequency_starttime_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/Smaller"
                        android:text="sample"
                        android:textSize="@dimen/SmallerContentText" />
                </TableRow>

                <TableRow
                    android:id="@+id/synchronization_configure_frequency_endtime_tbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:onClick="onSetEndTime" >

                    <TextView
                        android:id="@+id/synchronization_configure_frequency_endtimelabel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SynchronizationConfigureFrequencyEndTimeLabel"
                        android:textSize="@dimen/SmallerContentText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/synchronization_configure_frequency_endtime_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/Smaller"
                        android:text="sample"
                        android:textSize="@dimen/SmallerContentText" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0"
            android:background="@drawable/shadow_background"
            android:orientation="vertical"
            android:padding="@dimen/Smaller" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SynchronizationFrequencyNoteTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synchronization_configuration_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SynchronizationConfigurationNoteMessage" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:background="#ffD8D8D8"
        android:gravity="center_horizontal"
        android:padding="@dimen/ButtonPanelPadding" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/SaveButtonText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancel"
            android:text="@string/CancelButtonText" />
    </LinearLayout>

</LinearLayout>