<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beige_bg"
    android:orientation="vertical" >

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/shadow_background"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/AddToWhiteListLabel"
            android:textSize="@dimen/SmallerContentText"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addWhitelistNumberEt"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            />

    </TableRow>
    </TableLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="#ffD8D8D8"
    android:gravity="center_horizontal"
    android:padding="@dimen/ButtonPanelPadding" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="onAddNumber"
        android:text="@string/OkButtonText" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:onClick="onCancel"
    android:text="@string/CancelButtonText" />

</LinearLayout>
</LinearLayout>
