<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/start_service_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Smaller"
                android:text="@string/StartServiceLabel"
                android:textSize="@dimen/LabelTextSize" />

        </TableRow>
        </TableLayout>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scaleType="fitXY"
    android:src="?android:attr/listDivider" />
        <TableLayout
            android:id="@+id/stop_service_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/stop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Smaller"
                android:text="@string/StopServiceLabel"
                android:textSize="@dimen/LabelTextSize" />

        </TableRow>
        </TableLayout>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scaleType="fitXY"
    android:src="?android:attr/listDivider" />
        <TableLayout
            android:id="@+id/restart_service_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick" >

        <TableRow android:layout_margin="@dimen/activity_horizontal_margin" >

            <ImageView android:src="@drawable/synchronize" />

            <TextView
                android:layout_marginLeft="@dimen/Smaller"
                android:text="@string/RestartServiceLabel"
                android:textSize="@dimen/LabelTextSize" />

        </TableRow>
   </TableLayout> 

</LinearLayout>